@@ -216,22 +216,15 @@
                 <p>Suppose <m>A</m> is a square matrix, <m>\lambda</m> is an eigenvalue of <m>A</m>, and <m>s\geq 0</m> is an integer.  Then <m>\lambda^s</m> is an eigenvalue of <m>A^s</m>.</p>
             </statement>
             <proof>
-                <p>Let <m>\vect{x}\neq\zerovector</m> be one eigenvector of <m>A</m> for <m>\lambda</m>.  Suppose <m>A</m> has size <m>n</m>.  Then we proceed by induction on <m>s</m> (Proof Technique<nbsp/><xref ref="technique-I" acro="I" autoname="no"/>).  First, for <m>s=0</m>,<md>
-                    <mrow>A^s\vect{x}&amp;=A^0\vect{x}</mrow>
-                    <mrow>&amp;=I_n\vect{x}</mrow>
-                    <mrow>&amp;=\vect{x}&amp;&amp;
-                        <xref ref="theorem-MMIM" acro="MMIM" autoname="yes"/></mrow>
-                    <mrow>&amp;=1\vect{x}&amp;&amp;
-                        <xref ref="property-OC" acro="OC" autoname="yes"/></mrow>
-                    <mrow>&amp;=\lambda^0\vect{x}</mrow>
-                    <mrow>&amp;=\lambda^s\vect{x}</mrow>
-                </md>so <m>\lambda^s</m> is an eigenvalue of <m>A^s</m> in this special case.  If we assume the theorem is true for <m>s</m>, then we find<md>
+                <p>Let <m>\vect{x}\neq\zerovector</m> be one eigenvector of <m>A</m> for <m>\lambda</m>.  Then we proceed by induction on <m>s</m> (Proof Technique<nbsp/><xref ref="technique-I" acro="I" autoname="no"/>).  First, for <m>s=0</m>, employing <xref ref="theorem-MMIM" acro="MMIM" autoname="yes"/> and <xref ref="property-OC" acro="OC" autoname="yes"/> to establish the base case,<md>
+                    <mrow>A^s\vect{x}=A^0\vect{x}=I_n\vect{x}=\vect{x}=1\vect{x}=\lambda^0\vect{x}=\lambda^s\vect{x}</mrow>
+                </md>.  So <m>\lambda^s</m> is an eigenvalue of <m>A^s</m> in this special case.  For the induction step, we assume the theorem is true for <m>s</m>, and find<md>
                     <mrow>A^{s+1}\vect{x}&amp;=A^sA\vect{x}</mrow>
                     <mrow>&amp;=A^s\left(\lambda\vect{x}\right)&amp;&amp;
                         <xref ref="definition-EEM" acro="EEM" autoname="yes"/></mrow>
                     <mrow>&amp;=\lambda\left(A^s\vect{x}\right)&amp;&amp;
                         <xref ref="theorem-MMSMM" acro="MMSMM" autoname="yes"/></mrow>
-                    <mrow>&amp;=\lambda\left(\lambda^s\vect{x}\right)&amp;&amp;\text{Induction hypothesis}</mrow>
+                    <mrow>&amp;=\lambda\left(\lambda^s\vect{x}\right)&amp;&amp;\text{Induction Hypothesis}</mrow>
                     <mrow>&amp;=\left(\lambda\lambda^s\right)\vect{x}&amp;&amp;
                         <xref ref="property-SMAC" acro="SMAC" autoname="yes"/></mrow>
                     <mrow>&amp;=\lambda^{s+1}\vect{x}</mrow>
