@@ -6,6 +6,7 @@ Edit: Exercise IVLT.T15, streamline solution
 Edit: Clarify Example NSE (Katrina Hoefflinger)
 Edit: Added missing Sage practice cell in Sage LI (Samuel Gonzalez)
 Edit: Theorem PSPHS, proof missing "+" (Katrina Hoefflinger)
+Edit: Fine-tune induction proof of Theorem EOMP
 Change: Streamline second half of the proof of Theorem BS
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
